--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+
+    <!--Link to styles.css file -->
+    <link type="text/css" rel="stylesheet" href="css/styles.css" />
+
   </head>
   <body>
 
