--- a/crewmate.html
+++ b/crewmate.html
@@ -2,13 +2,32 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Among Us</title>
+
+    <!--Google Font-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 
     <!--Link to styles.css file -->
     <link type="text/css" rel="stylesheet" href="css/styles.css" />
 
   </head>
   <body>
+
+    <main>
+
+      <section>
+          <h3>Tips to Take Your Crewmate Squad to Victory</h3>
+            <ol>
+              <li>Finish tasks as quickly as possible.</li>
+              <li>If visual tasks are on, save them for last to use as defense.</li>
+              <li>Be aware of your surroundings.</li>
+              <li>Group together strategically.</li>
+              <li>Trust no one, unless they've completed a visual task.</li>
+            </ol>
+        </section>
+
+    </main>
 
   </body>
 </html>
