--- a/imposter.html
+++ b/imposter.html
@@ -12,7 +12,19 @@
     <link type="text/css" rel="stylesheet" href="css/styles.css" />
 
   </head>
+
   <body>
+    <header>
+      <h1>Among Us</h1>
+
+
+     <nav>
+       <ul>
+         <li><a href="crewmate.html">Crewmate</a></li>
+         <li><a href="imposter.html">Imposter</a></li>
+       </ul>
+     </nav>
+    </header>
 
     <main>
 
