Added background image, font family, and home page

--- a/imposter.html
+++ b/imposter.html
@@ -20,6 +20,7 @@
 
      <nav>
        <ul>
+         <li><a href="index.html">Home</a></li>
          <li><a href="crewmate.html">Crewmate</a></li>
          <li><a href="imposter.html">Imposter</a></li>
        </ul>
@@ -40,6 +41,10 @@
       </section>
 
     </main>
+
+    <footer>
+          <p>Website by Lacey White</p>
+        </footer>
 
   </body>
 </html>
