--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
      <nav>
        <ul>
+         <li><a href="index.html">Home</a></li>
          <li><a href="crewmate.html">Crewmate</a></li>
          <li><a href="imposter.html">Imposter</a></li>
        </ul>
@@ -38,6 +39,10 @@
     <img src="images/cyan.png" alt="cyan" title="cyan" />
 
     </main>
+
+    <footer>
+          <p>Website by Lacey White</p>
+        </footer>
 
   </body>
 </html>
