Added header tags and font classes

--- a/crewmate.html
+++ b/crewmate.html
@@ -30,8 +30,8 @@
     <main>
 
       <section>
-          <h3>Tips to Take Your Crewmate Squad to Victory</h3>
-            <ol>
+          <h3 id="second">Tips to Take Your Crewmate Squad to Victory</h3>
+            <ol class"list">
               <li>Finish tasks as quickly as possible.</li>
               <li>If visual tasks are on, save them for last to use as defense.</li>
               <li>Be aware of your surroundings.</li>
