--- a/imposter.html
+++ b/imposter.html
@@ -30,8 +30,8 @@
     <main>
 
       <section>
-          <h3>Tips to Lose Friends by Winning As Imposter</h3>
-            <ol>
+          <h3 id="first">Tips to Lose Friends by Winning As Imposter</h3>
+            <ol class="list">
               <li>Sabotage always.</li>
               <li>Don't fake visual tasks.</li>
               <li>Prepare your alibi.</li>
