Added inline header and modified header css

--- a/crewmate.html
+++ b/crewmate.html
@@ -31,7 +31,7 @@
 
       <section>
           <h3 id="second">Tips to Take Your Crewmate Squad to Victory</h3>
-            <ol class"list">
+            <ol class="list">
               <li>Finish tasks as quickly as possible.</li>
               <li>If visual tasks are on, save them for last to use as defense.</li>
               <li>Be aware of your surroundings.</li>
