Added containers, tested positioning, added text

--- a/crewmate.html
+++ b/crewmate.html
@@ -15,21 +15,39 @@
 
   <body>
     <header>
-      <h1>Among Us</h1>
+      <div class="container">
+        <h1>Among Us</h1>
 
 
-     <nav>
-       <ul>
-         <li><a href="index.html">Home</a></li>
-         <li><a href="crewmate.html">Crewmate</a></li>
-         <li><a href="imposter.html">Imposter</a></li>
-       </ul>
-     </nav>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="crewmate.html">Crewmate</a></li>
+            <li><a href="imposter.html">Imposter</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
+      <div class="container">
+        <section>
+          <h2> So you're a crewmate? </h2>
+            <img class"cyan" src="images/cyan.png" alt="cyan" title="cyan" width="500"/>
+          </div>
 
-      <section>
+
+            <p>So now that you know your main objective is to complete all your tasks before the Imposter kills you, I've put together some tips to help you win. Don't forget, even if the Imposter gets you keep doing your tasks. Make use of the discussion time to question people into giving their location(s) and listen for those that are tripping up on their wereabouts. </p>
+          </div>
+
+
+        </div>
+
+
+        <section>
+      </div>
+
+      <div class="container">
           <h3 id="second">Tips to Take Your Crewmate Squad to Victory</h3>
             <ol class="list">
               <li>Finish tasks as quickly as possible.</li>
@@ -39,6 +57,7 @@
               <li>Trust no one, unless they've completed a visual task.</li>
             </ol>
         </section>
+      </div>
 
     </main>
 
