Added paragraph text

--- a/imposter.html
+++ b/imposter.html
@@ -15,31 +15,33 @@
 
   <body>
     <header>
-      <h1>Among Us</h1>
+      <div class="container">
+       <h1>Among Us</h1>
 
 
-     <nav>
-       <ul>
-         <li><a href="index.html">Home</a></li>
-         <li><a href="crewmate.html">Crewmate</a></li>
-         <li><a href="imposter.html">Imposter</a></li>
-       </ul>
-     </nav>
+       <nav>
+         <ul>
+           <li><a href="index.html">Home</a></li>
+           <li><a href="crewmate.html">Crewmate</a></li>
+           <li><a href="imposter.html">Imposter</a></li>
+         </ul>
+       </nav>
+     </div>
     </header>
 
     <main>
-
-      <section>
-          <h3 id="first">Tips to Lose Friends by Winning As Imposter</h3>
-            <ol class="list">
-              <li>Sabotage always.</li>
-              <li>Don't fake visual tasks.</li>
-              <li>Prepare your alibi.</li>
-              <li>Self-reporting isn't always the best option, especially if you're a bad liar.</li>
-              <li>Avoid common kill zones if you can.</li>
-            </ol>
-      </section>
-
+      <div class="container">
+        <section>
+            <h3 id="first">Tips to Lose Friends by Winning As Imposter</h3>
+              <ol class="list">
+                <li>Sabotage always.</li>
+                <li>Don't fake visual tasks.</li>
+                <li>Prepare your alibi.</li>
+                <li>Self-reporting isn't always the best option, especially if you're a bad liar.</li>
+                <li>Avoid common kill zones if you can.</li>
+              </ol>
+        </section>
+      </div>
     </main>
 
     <footer>
