added new image and span tags

--- a/crewmate.html
+++ b/crewmate.html
@@ -32,12 +32,12 @@
     <main>
       <div class="container">
         <section>
-          <h2> So you're a crewmate? </h2>
-            <img class"cyan" src="images/cyan.png" alt="cyan" title="cyan" width="500"/>
+          <h2> So you're a <span class="crew">crewmate</span>?</h2>
+            <img class="cyan" src="images/cyan.png" alt="cyan" title="cyan" width="500"/>
           </div>
 
 
-            <p>So now that you know your main objective is to complete all your tasks before the Imposter kills you, I've put together some tips to help you win. Don't forget, even if the Imposter gets you keep doing your tasks. Make use of the discussion time to question people into giving their location(s) and listen for those that are tripping up on their wereabouts. </p>
+            <p>So now that you know your main objective is to complete all your tasks before the Imposter kills you, I've put together some tips to help you win. Don't forget, even if the Imposter gets you keep doing your tasks. Make use of the discussion time to question people into giving their location(s) and listen for those that are tripping up on their whereabouts. </p>
           </div>
         </div>
 
@@ -55,6 +55,9 @@
               <li>Trust no one, unless they've completed a visual task.</li>
             </ol>
         </section>
+
+        <img class="ghost" src="images/ghost.png" alt="crewghost" title="crewghost" />
+
       </div>
 
     </main>
