--- a/imposter.html
+++ b/imposter.html
@@ -32,6 +32,17 @@
     <main>
       <div class="container">
         <section>
+          <h2> So it was <span class="standout">YOU</span> in electrical? </h2>
+            <img class="imposter" src="images/imposter.jpg" alt="shh" title="shh" width="400"/>
+          </div>
+
+
+            <p>If this is your first time as Imposter, best of luck to you! I remember being so scared to even talk to anyone in Discord because I'm well aware I'm a terrible liar and would always give away my role as Imposter. But you can do it, I believe in you. I've put together the below tips on how to win as the Imposter. Don't forget, if you have another Imposter on your side do everything you can to at least let one of you win the game for both!</p>
+          </div>
+        </div>
+
+      <div class="container">
+        <section>
             <h3 id="first">Tips to Lose Friends by Winning As Imposter</h3>
               <ol class="list">
                 <li>Sabotage always.</li>
@@ -41,6 +52,9 @@
                 <li>Avoid common kill zones if you can.</li>
               </ol>
         </section>
+
+        <img class="ghost" src="images/ghost.png" alt="crewghost" title="crewghost" />
+
       </div>
     </main>
 
