Added images with fixed positions

--- a/crewmate.html
+++ b/crewmate.html
@@ -58,6 +58,8 @@
 
         <img class="ghost" src="images/ghost.png" alt="crewghost" title="crewghost" />
 
+        <img class="press" src="images/press.png" alt="press" title="Press" />
+
       </div>
 
     </main>
