--- a/imposter.html
+++ b/imposter.html
@@ -56,6 +56,8 @@
 
         <img class="ghost" src="images/ghost.png" alt="crewghost" title="crewghost" />
 
+        <img class="report" src="images/report.png" alt="report" title="Report" />
+
       </div>
     </main>
 
